{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Standard",
            "id": "2e19f530-75ba-4292-ae71-41b01e05f26c",
            "actions": [
                {
                    "name": "MoveSideWays",
                    "type": "Button",
                    "id": "2d6a3dd8-cbff-4998-9b0f-63f19f4fc3af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveHeightWays",
                    "type": "Button",
                    "id": "d81c2b8b-5e02-4ab9-ab3d-7755a1375da4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "SideWays",
                    "id": "4dcb199e-1159-4383-95f8-d4f0836136f0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSideWays",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6f69f02d-36a2-4948-b8ff-3e4e8098a186",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSideWays",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "13888f33-8b65-4b2d-9866-c59969fab830",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSideWays",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "HeightWays",
                    "id": "d376aa0f-454b-42be-a138-020ec35ec41e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHeightWays",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fa8a7254-6904-4d28-b347-dc2bc94b8565",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHeightWays",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "788750b9-85cf-4da0-818b-9041ac7939e5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHeightWays",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}